# Staking_training

./: .gitignore  Cargo.toml  NOTICE  package.json
artifacts/: checksums.txt  staking.wasm
scripts/: a.ts  deploy.ts  execute.ts  query.ts
src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  state.rs  test.rs
