[package]
name = "staking"
version = "0.1.0"
authors = ["ndt"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0
"""


[dependencies]

serde-json-wasm = "0.5.1"
cosmwasm-std = "1.2.0"
cosmwasm-storage = { version = "1.2.0", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0"
cw20 = { version = "1.0.1" }
cw20-base = { version = "1.0.1", features = ["library"] }
cw-storage-plus = { version = "1.0.1" }
cosmwasm-schema = "1.2.0"

[dev-dependencies]
cw-multi-test = "1.2.0"

